--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Twinkle+Star&display=swap');
+
 html {
     font-size: 62.5%;
 }
@@ -8,7 +10,7 @@ html {
     margin: 0;
     padding: 0;
     box-sizing: inherit;
-    font-family: 'Montserrat', sans-serif;
+    font-family:'Twinkle Star', cursive;
 }
 
 body {
@@ -22,9 +24,8 @@ body {
 }
 
 .app {
-    margin-top: 2rem;
     display: grid;
-    grid-template-rows: 20px 1fr;
+    grid-template-rows: 80px 1fr;
     grid-template-columns: 1fr;
     justify-content: center;
     align-items: center;
